# skiptro-web

./: .eslintrc.js  .eslintrc.json  .flowconfig  .gitignore  .prettierrc.json  README.md  config.ts.asc  jest.config.js  license-report-config.json  licenses.html  licenses.txt  package-lock.json  package.json  tsconfig.json  webext.config.js  webpack.config.js
.github/workflows/: cicd.yaml  skiptro-web.yaml
api/: api.py  main.py  pyproject.toml  tasks.py
app/: InjectorContext.tsx  background-script.ts  config.ts.asc  content-script.css  content-script.scss  content-script.ts  content_script.js  content_script.ts  index.css  index.html  index.scss  index.ts  index.tsx  ioc-config.ts  manifest.json  popup.tsx
app/_locales/en/: messages.json
app/components/footer/: index.css  index.tsx
app/components/header/: index.tsx
app/components/label/: index.tsx
app/components/link/: index.tsx
app/components/popup/: index.css  index.tsx
app/components/skip-button/: component.css  component.js  component.ts  index.ts
app/lib/: browser-message-type.ts  configuration.ts  minimum-version-checker.ts  notification-id.ts  time.ts
app/lib/attachment-strategies/: general-skip-button-attachment-strategy.ts  skip-button-attachment-strategy.ts
app/lib/attachment_strategies/: general-skip-button-attachment-strategy.js  general-skip-button-attachment-strategy.ts  skip-button-attachment-strategy.js
app/services/analytics/: analytics-service.ts  mixpanel-service.ts
app/services/feature/: feature-service.ts  (+2 more)
docs/: brainstorm.md  intro_skipping_problem.md  solutions.md
(+9 files in other folders)
